--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,10 +97,10 @@ button {
     z-index: -1;
     bottom: auto;
     background: #00c6ff;
-    /* background: -webkit-linear-gradient(to right, #0072ff, #00c6ff); */
-    /* background: linear-gradient(to right, #0072ff, #00c6ff); */
-    background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
-    background: linear-gradient(to right, #0e0e0e, #ff5448);
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);
+    background: linear-gradient(to right, #0072ff, #00c6ff);
+    /* background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
+    background: linear-gradient(to right, #0e0e0e, #ff5448); */
     top: 0;
     left: 0;
     width: 100%;
@@ -167,10 +167,10 @@ button {
     height: 100%;
     border-radius: 3px;
     background: #00c6ff;
-    /* background: -webkit-linear-gradient(to right, #0072ff, #00c6ff); */
-    /* background: linear-gradient(to right, #0072ff, #00c6ff); */
-    background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
-    background: linear-gradient(to right, #0e0e0e, #ff5448);
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);
+    background: linear-gradient(to right, #0072ff, #00c6ff);
+    /* background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
+    background: linear-gradient(to right, #0e0e0e, #ff5448); */
     opacity: 0;
     visibility: hidden;
     -moz-transition: .3s;
@@ -522,10 +522,10 @@ button {
     width: 100%;
     height: 50%;
     background: #00c6ff;
-    /* background: -webkit-linear-gradient(to right, #0072ff, #00c6ff); */
-    /* background: linear-gradient(to right, #0072ff, #00c6ff); */
-    background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
-    background: linear-gradient(to right, #0e0e0e, #ff5448);
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);
+    background: linear-gradient(to right, #0072ff, #00c6ff);
+    /* background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
+    background: linear-gradient(to right, #0e0e0e, #ff5448); */
     opacity: 0;
     visibility: hidden;
     border-radius: 5px 30px 5px 5px;
@@ -643,10 +643,10 @@ button {
     width: 15px;
     height: 15px;
     background: #00c6ff;
-    /* background: -webkit-linear-gradient(to right, #0072ff, #00c6ff); */
-    /* background: linear-gradient(to right, #0072ff, #00c6ff); */
-    background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
-    background: linear-gradient(to right, #0e0e0e, #ff5448);
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);
+    background: linear-gradient(to right, #0072ff, #00c6ff);
+    /* background: -webkit-linear-gradient(to right, #0e0e0e, #ff5448);
+    background: linear-gradient(to right, #0e0e0e, #ff5448); */
     -webkit-clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
     clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%)
 }
